Fix collapse and tags styles

--- a/src/styles/AppLayout/collapse.scss
+++ b/src/styles/AppLayout/collapse.scss
@@ -93,10 +93,12 @@ $white: #ffff;
             line-height: 1.7;
             padding: 20px 10px;
             border-radius: 5px;
+            line-height: 1.3;
 
             @media (min-width: 600px) {
                 font-size: 16px;
                 border-radius: 8px;
+                line-height: 1.4;
             }
 
             @media (min-width: 1200px) {
@@ -104,6 +106,7 @@ $white: #ffff;
                 line-height: 2;
                 padding: 20px;
                 border-radius: 10px;
+                line-height: 1.5;
             }
         }
         &-description-down {
@@ -196,20 +199,21 @@ $white: #ffff;
                 color: $primaryColor;
                 font-size: 12px;
                 font-weight: 400;
-
-                min-height: 115px;
-                height: fit-content;
+                line-height: 1.3;
+                height: fit-conntent;
                 padding: 20px 20px;
                 border-radius: 0 0 5px 5px;
                 @media (min-width: 600px) {
                     font-size: 16px;
                     border-radius: 8px;
                     min-height: 160px;
+                    line-height: 1.4;
                 }
 
                 @media (min-width: 1200px) {
                     font-size: 18px;
                     border-radius: 10px;
+                    line-height: 1.5;
                 }
             }
             &-description-down {
