--- a/src/styles/RentalPage/rentalpage.scss
+++ b/src/styles/RentalPage/rentalpage.scss
@@ -48,11 +48,13 @@ $white: #ffffff;
             display: flex;
             flex-direction: row;
             height: fit-content;
+            flex-wrap: wrap;
             .tag {
                 font-size: 10px;
                 color: $white;
                 border-radius: 5px;
                 margin-right: 5px;
+                margin-top: 5px;
                 background-color: $primaryColor;
                 height: 19px;
                 text-align: center;
